Aggiunta variabile URI in classe animale con set e get Aggiunto if nel metodo bind() di AnimalHolder Aggiunto Button selectImg in MainActivity e variabile PICK_IMAGE Aggiunto nuovo listener sul clic di selectImg e override metodo onActivityResult

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,22 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recView"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="320dp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/selectImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Image"
+            android:textSize="10sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -50,7 +64,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Add" />
+                android:background="@android:color/holo_blue_light"
+                android:text="Add"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
