--- a/app/src/main/res/layout/recycle_view.xml
+++ b/app/src/main/res/layout/recycle_view.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/imgAnimale"
-        android:layout_width="wrap_content"
+        android:layout_width="77dp"
         android:layout_height="77dp"
         android:layout_weight="1"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/ic_launcher" />
 </LinearLayout>
